<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.alakey.memodognotes.SettingsActivity"
    android:padding="18dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="27sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_theme_title"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/ic_brightness"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Switch
                android:id="@+id/switch_theme"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/theme_title"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/communication"
        android:textSize="27sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:orientation="vertical"
            android:onClick="onClickShare">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Поделиться"
                android:textSize="18sp"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/ic_share"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:orientation="vertical"
            android:onClick="onClickMoreApps">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_apps_title"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/ic_more"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:orientation="vertical"
            android:onClick="onClickFollow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_title"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/ic_person"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/author_title"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_app_title"
                android:drawablePadding="20dp"
                android:drawableRight="@drawable/ic_android"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/version_app_info"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>